--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.globeyapp'
+    namespace 'APP_DESIGN_PROJECT.globeyapp'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.globeyapp"
+        applicationId "APP_DESIGN_PROJECT.globeyapp"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -39,6 +39,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 }
