Change add_trip_page to AddTripActivity

--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".add_trip_page"
+            android:name=".AddTripActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
