changed the landing page 'Globey', and added the 'add image' functionality to the activity_add_trip_page

--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".Trip_Expanded_Page"
+            android:name=".TripExpandedActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
